eks-traefik/traefik.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  type: NodePort
  ports:
    - protocol: TCP
      name: web
      port: 8000
    - protocol: TCP
      name: admin
      port: 8080
    - protocol: TCP
      name: websecure
      port: 443
  selector:
    app: traefik

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v2.4.8
          args:
            - --api.insecure=true
            - --api.dashboard=true
            - --log.level=DEBUG
            - --accesslog
            - --entrypoints.web.Address=:8000
            - --entrypoints.websecure.Address=:443
            - --providers.kubernetescrd=true
            - --providers.kubernetescrd.namespaces=default
            - --providers.kubernetescrd.labelselector="app=traefik"
          ports:
            - name: web
              containerPort: 8000
            - name: websecure
              containerPort: 443
            - name: admin
              containerPort: 8080

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`devpie.io`)
      kind: Rule
      services:
        - name: service-2048
          port: 80
